--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sample NodeJS backend for SurveyJS: Survey Library and Survey Creator",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "migrate": "knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,14 @@
   "homepage": "https://github.com/surveyjs/surveyjs-nodejs#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "pg-promise": "^7.3.2"
+    "knex": "^2.5.1",
+    "objection": "^3.1.1",
+    "pg": "^8.11.2",
+    "pg-promise": "^7.3.2",
+    "sqlite3": "^5.1.6",
+    "uuidv4": "^6.2.13"
   }
 }
